# IDEIA-IntelWheels

./: README.md
Gazebo_World/: model.config
pitfall_detector/: CMakeLists.txt  package.xml
pitfall_detector/config/: params.yaml
pitfall_detector/include/: depth_subscriber.h  ground_segmentation.h  zed2_camera.h
pitfall_detector/src/: depth_subscriber.cpp  ground_segmentation.cpp  zed2_camera.cpp  zed_publisher.cpp
